validator_derive_tests/tests/compile-fail/not_a_struct.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/compile-fail/not_a_struct.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
